# orac

./: Cargo.toml
assets/: styles.css
src/: commands.rs  events.rs  main.rs
src/entities/: channel.rs  guild.rs  guild_access.rs  mod.rs  prelude.rs  session.rs  user.rs
src/migrator/: entities.rs  m20231217_000001_create_user_and_sessions_table.rs  m20231226_112401_session_store.rs  m20231227_113307_channel_store.rs  m20231227_113316_user_store.rs  m20240106_032511_channel_settings.rs  m20240724_073046_unique_guild.rs  m20240724_090901_guild_access.rs  m20240729_100648_channel_options.rs  mod.rs
src/web/: appstate.rs  channels.rs  dashboard.rs  errors.rs  filters.rs  guilds.rs  login.rs  mod.rs  oauth.rs  profile.rs  session.rs  templates.rs  util.rs
templates/: .dir-locals.el  add_channel.html  base.html  channels.html  dashboard.html  guild.html  guilds.html  index.html  profile.html
